fix trending product mobile wrap

--- a/src/styles/Trending.module.css
+++ b/src/styles/Trending.module.css
@@ -1,5 +1,5 @@
 .WordBreak {
-    word-break: break-all;
+    word-break: break-word;
   }
 
 .Image {
